<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">


        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:autofillHints="i am"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/enter_your_name"
            android:textColorHint="#030304" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/add_something_to_your_tea"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/extraCookies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/extracookies"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/extraMilk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/extra_milk"
            android:textSize="18sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/quantity"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button"
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:layout_weight="1"
                android:onClick="decrement"
                android:text="@string/sub" />

            <TextView
                android:id="@+id/quantityTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/_2"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:layout_weight="1"
                android:onClick="increment"
                android:text="@string/add" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:text="@string/order_summary"
            android:textSize="18sp" />
<androidx.appcompat.widget.LinearLayoutCompat
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal">
    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:onClick="submitOrder"
        android:text="@string/order" />
</androidx.appcompat.widget.LinearLayoutCompat>



    </LinearLayout>
</ScrollView>